--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 
-		name = gddabe
-		email = gddabe@gmail.com
+		name = drawxcards
+		email = drawxcards@gmail.com
 
 [alias]
 
@@ -200,13 +200,3 @@
 [url "git://gist.github.com/"]
 
 		insteadOf = "gist:"
-
-[difftool "sourcetree"]
-
-		cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-		path =
-
-[mergetool "sourcetree"]
-
-		cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-		trustExitCode = true
